<resources>
    <string name="app_name">Watch Dog</string>

    <!--exit notification-->
    <string name="press_again_exit_app">Press again to exit</string>

    <!--dont edit-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="codes_arrays">
        <item>DUKA PEPE</item>
        <item>KPMG</item>
        <item>Google</item>
        <item>MicroSoft</item>
    </string-array>

    <string name="tab_call">CALLS</string>
    <string name="tab_sms">TEXT</string>
    <string name="tab_data">DATA</string>

    <!--Facebook shit-->
    <string name="facebook_app_id">404020580057017</string>
    <string name="fb_login_protocol_scheme">fb404020580057017</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_password_confirm">Retype Password</string>


    <string name="not_available">Not avail.</string>

    <string name="seconds">00 m %1$02d s</string>
    <string name="minutes_seconds">%1$02d m %2$02d s</string>

    <string name="kb">" KB"</string>
    <string name="mb">" MB"</string>
    <string name="gb">" GB"</string>
    <string name="received">Received</string>
    <string name="transmitted">Transmitted</string>
    <string name="total">Total</string>

    <string name="data_dis">Mobile data disabled</string>
    <string name="other_network">Mobile data disabled. Other network is active (Wi-Fi, Bluetooth etc.)</string>
    <string name="sim1_act">SIM1 is active: %1$s/s || %2$s/s</string>
    <string name="sim2_act">SIM2 is active: %1$s/s || %2$s/s</string>
    <string name="sim3_act">SIM3 is active: %1$s/s || %2$s/s</string>
    <string name="not_supported">Your device is not supported</string>

    <string name="go_to_settings">Go to Settings-Data Usage</string>

</resources>
