<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

   <include layout="@layout/toolbar"/>

   <ScrollView
       android:layout_marginTop="?attr/actionBarSize"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:orientation="vertical"
          android:id="@+id/rl1">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/data_dis"
             android:id="@+id/sim"
             android:layout_centerHorizontal="true"
             android:gravity="top|center_horizontal"
             android:textColor="?android:attr/textColorPrimary" />

          <HorizontalScrollView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/horizontalScrollView"
              android:layout_below="@+id/sim"
              android:layout_marginTop="10dp"
              android:layout_centerHorizontal="true">

              <TableLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tableLayout">

                  <TableRow
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="SIM1"
                          android:id="@+id/sim1_name"
                          android:layout_column="2"
                          android:gravity="center_vertical|center"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="SIM2"
                          android:id="@+id/sim2_name"
                          android:layout_column="3"
                          android:gravity="center_vertical|center"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="SIM3"
                          android:id="@+id/sim3_name"
                          android:layout_column="4"
                          android:gravity="center_vertical|center"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />
                  </TableRow>

                  <TableRow
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/txrow"
                      android:layout_marginTop="10dp">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="14sp"
                          android:text="@string/transmitted"
                          android:id="@+id/txText"
                          android:width="80dp"
                          android:layout_column="1"
                          android:gravity="left|center_vertical"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="14sp"
                          android:text="0"
                          android:id="@+id/TX1"
                          android:gravity="center_vertical|center"
                          android:layout_column="2"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="14sp"
                          android:text="0"
                          android:id="@+id/TX2"
                          android:gravity="center_vertical|center"
                          android:layout_column="3"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="14sp"
                          android:text="0"
                          android:id="@+id/TX3"
                          android:gravity="center_vertical|center"
                          android:layout_column="4"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />

                  </TableRow>

                  <TableRow
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/rxrow"
                      android:layout_marginTop="10dp">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="14sp"
                          android:text="@string/received"
                          android:id="@+id/rxText"
                          android:layout_column="1"
                          android:width="80dp"
                          android:gravity="left|center_vertical"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="14sp"
                          android:text="0"
                          android:id="@+id/RX1"
                          android:layout_column="2"
                          android:gravity="center_vertical|center"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="14sp"
                          android:text="0"
                          android:id="@+id/RX2"
                          android:width="100dp"
                          android:layout_column="3"
                          android:gravity="center_vertical|center"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="14sp"
                          android:text="0"
                          android:id="@+id/RX3"
                          android:width="100dp"
                          android:layout_column="4"
                          android:gravity="center_vertical|center"
                          android:textColor="?android:attr/textColorPrimary" />

                  </TableRow>

                  <TableRow
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/totrow"
                      android:layout_marginTop="10dp">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/total"
                          android:id="@+id/totalText"
                          android:layout_column="1"
                          android:gravity="left|center_vertical"
                          android:width="80dp"
                          android:textSize="14sp"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="0"
                          android:id="@+id/Tot1"
                          android:layout_column="2"
                          android:gravity="center_vertical|center"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="0"
                          android:id="@+id/Tot2"
                          android:layout_column="3"
                          android:gravity="center_vertical|center"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="0"
                          android:id="@+id/Tot3"
                          android:layout_column="4"
                          android:gravity="center_vertical|center"
                          android:width="100dp"
                          android:textColor="?android:attr/textColorPrimary" />

                  </TableRow>

              </TableLayout>

          </HorizontalScrollView>

          <android.support.v7.widget.AppCompatButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/go_to_settings"
              android:id="@+id/settings"
              android:layout_marginTop="25dp"
              android:layout_alignParentBottom="false"
              android:layout_below="@+id/horizontalScrollView"
              android:layout_centerHorizontal="true" />

      </RelativeLayout>

   </ScrollView>



</LinearLayout>